implemented nearest foodtruck search  (#3)
* feat: added call to the third party endpoint to retrieve data; added helper method to calculate distance between two coordinates; implemented logic to get 5 nearest locations;

* feat: added custom quicksort implementation

* feat: added unit tests for location data fetch

* feat: updated README.md

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serverless"
   ],
   "dependencies": {
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
