fix: cannot access endpoint when running locally in devcontainer (#6)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,5 +28,9 @@
 	"postStartCommand": "npm update -g serverless && npm install",
 
 	// Connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "node"
+	"remoteUser": "node",
+	
+	"forwardPorts": [
+		7071
+	]
 }
